styles.css
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");

html {
  scroll-behavior: smooth;
}

body {
  background: var(--backgroundColor);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: Ubuntu, serif;
  color: #eeeeef;
}

nav {
  position: fixed;
  width: 100%;
  z-index: 1000;
  backdrop-filter: blur(8px);
  background: rgba(34, 37, 59, 0.6);
}

nav ul {
  display: flex;
  justify-content: center;
  align-items: center;
}

nav li {
  margin: 30px;
  list-style: none;
  z-index: 100;
}

nav li a {
  text-decoration: none;
  font-size: calc(0.7em + 0.2vw);
  transition: all 0.2s;
  font-weight: 900;
  position: relative;
}

nav li a:after {
  content: "";
  background: var(--primaryColor);
  width: 0;
  height: 40%;
  position: absolute;
  left: 0;
  top: 60%;
  z-index: -1;
  opacity: 0.5;
  transition: all 0.2s;
}

nav li a:hover:after {
  width: 100%;
  color: var(--primaryColor);
}

.title {
  display: flex;
  align-items: center;
  margin-bottom: 30px;
}

.title-text {
  color: #fff;
  font-size: calc(0.7em + 2.5vw);
  margin-left: 10px;
}

.title-number {
  font-size: calc(0.4em + 2.2vw);
  font-weight: 600;
  color: var(--primaryColor);
  font-family: "Roboto Mono", serif;
}

.title:after {
  content: "";
  display: block;
  position: relative;
  top: 50%;
  width: 30%;
  background: var(--decoColor);
  height: 1px;
  margin-left: 30px;
}

.container {
  width: 80%;
  margin: 80px auto;
  padding-top: 100px;
}

.name {
  font-size: 20px;
  margin-top: 10px;
}

.hero-content {
  margin: auto;
  height: 100vh;
  display: grid;
}

.hero-text-content {
  width: 70%;
  display: flex;
  margin: auto;
  align-items: center;
}

.hero-text-content p {
  font-size: calc(0.6em + 1vw);
}

.main-title {
  text-align: left;
  font-size: calc(1.4em + 1.3vw);
  color: var(--primaryColor);
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
  margin-bottom: 15px;
}

.hero-content img {
  width: 50%;
  margin-right: 30px;
  object-fit: cover;
  overflow: hidden;
  border-radius: 10px;
}

.story-content img {
  width: 100%;
  height: 100%;
  box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.4);
  border: solid 3px var(--imgBorderColor);
  border-radius: 10px;
  object-fit: cover;
}

.story {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 30px;
  align-items: center;
}

.story:not(:last-child) {
  margin: 50px 0;
}

.story-content p {
  line-height: 1.5em;
  font-size: calc(0.5em + 0.7vw);
  color: var(--textColor);
}

.story-content p:nth-child(even) {
  text-align: right;
}

.org-container img {
  object-fit: cover;
  width: 100%;
}

.on-hover-bounce {
  transition: all 0.2s;
}

.on-hover-bounce:hover {
  transform: translateY(-10px);
  cursor: pointer;
}

.members-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: 20px;
  grid-row-gap: 40px;
  justify-content: center;
}

.executives-container img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  border-radius: 10px;
  border: solid 3px var(--imgBorderColor);
  box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.4);
}

.executive p {
  text-align: center;
}

.founder p {
  text-align: center;
}

.founders-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  justify-content: center;
  width: 100%;
}

.founder {
  width: 100%;
}

.founders-container img {
  width: 100%;
  height: 300px;
  object-fit: cover;
  border-radius: 10px;
  border: solid 3px var(--imgBorderColor);
  box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.4);
}

.sdg-grid-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-column-gap: 30px;
}

.sdg-heading {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 30px auto;
  width: 100%;
}

.sdg-heading {
  width: 100%;
  object-fit: contain;
  border-radius: 10px;
}

#sdg-instructions {
  font-size: calc(0.2em + 1vw);
  width: 80%;
  color: var(--textColor);
}

.sdg-3 {
  color: #4c9f38;
}

footer {
  background: #12141f;
  padding: 30px;
  text-align: center;
  font-size: calc(0.6em + 0.5vw);
}

footer p {
  color: #4a5667;
}

footer span {
  color: var(--primaryColor);
  cursor: pointer;
}

.accordion-button {
  background-color: #2b304c;
  border: none;
  color: white;
  text-align: left;
  cursor: pointer;
  padding: 18px;
  width: 100%;
}

.active,
.accordion-button:hover {
  background-color: #33385a;
}

.panel {
  background-color: #3e446e;
  overflow: hidden;
  width: 100%;
  margin: auto;
  max-height: 0;
  transition: max-height 0.2s;
}

.panel p {
  margin: 20px 30px;
  text-align: left;
  line-height: 1.5em;
}

.accordion-button:after {
  content: "+";
  font-size: 15px;
  color: #fff;
  float: right;
  margin-left: 5px;
}

.active:after {
  content: "-";
  font-size: 15px;
}

.sdg-5 {
  color: #ff3b21;
}

.sdg-10 {
  color: #de1566;
}

.arrow {
  position: absolute;
  top: 90%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.arrow span {
  display: block;
  width: 30px;
  height: 30px;
  border-bottom: 5px solid var(--primaryColor);
  border-right: 5px solid var(--primaryColor);
  transform: rotate(45deg);
  margin: -10px;
  animation: scroll 2s infinite;
}

.arrow span:nth-child(2) {
  animation-delay: -0.2s;
}

.arrow span:nth-child(3) {
  animation-delay: -0.4s;
}

@keyframes scroll {
  0% {
    opacity: 0;
    transform: rotate(45deg) translate(-20px, -20px);
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

@media screen and (max-width: 1000px) {
  .members-container {
    grid-template-columns: repeat(3, 1fr);
  }
}

@media screen and (max-width: 800px) {
  .hero-text-content {
    flex-direction: column;
    align-items: center;
  }

  .hero-content img {
    width: 80%;
  }

  .hero-text-content h1 {
    text-align: center;
    margin-top: 30px;
  }

  .hero-text-content p {
    text-align: center;
    width: 80%;
    margin: 0 auto;
  }

  .hero-text-content img {
    margin: 0;
  }

  .sdg-grid-container {
    grid-template-columns: 1fr;
    grid-row-gap: 50px;
    width: 100%;
    margin: 0 auto;
  }

  .story-content .story {
    grid-template-columns: 1fr;
  }

  .story-content img {
    grid-row-start: 1;
    margin-bottom: 30px;
    height: 300px;
  }

  .story-content p {
    padding: 0;
  }

  .story-content p:nth-child(even) {
    text-align: left;
    padding: 0;
  }
}

@media screen and (max-width: 474px) {
  .nav-hide {
    display: none;
  }

  .story:not(:last-child) {
    margin-bottom: 80px;
  }

  .story-content p {
    line-height: 22px;
  }

  .hero-text-content img {
    width: 80%;
  }

  nav li {
    margin: 20px;
  }

  .arrow span {
    width: 20px;
    height: 20px;
    border-bottom: 4px solid var(--primaryColor);
    border-right: 4px solid var(--primaryColor);
    margin: -7px;
  }

  .panel p {
    font-size: calc(0.3em + 1vw);
    margin: 15px;
  }

  .sdg-grid-container {
    width: 100%;
  }
}

@media screen and (max-width: 600px) {
  .members-container {
    grid-template-columns: repeat(2, 1fr);
  }
}

@media screen and (max-width: 779px) {
  .founders-container img {
    width: 100%;
    height: 300px;
  }

  .story-content p {
    font-size: calc(0.7em + 0.7vw);
  }
}

